---
source: src/visitor/dot.rs
expression: v.into_inner().finalise()
---
digraph g {
	page_1:2 -> page_2:head;
	page_2 [shape=record, label="<head>Level 0|<1>·|1"]

	page_1:4 -> page_3:head;
	page_3 [shape=record, label="<head>Level 0|<3>·|3"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 1|<2>·|2|<4>·|4"]

}

